# btcser

./: Cargo.toml  README.md
.github/workflows/: rust.yml
btcser/: Cargo.toml
btcser-aflpp/: Cargo.toml
btcser-aflpp/src/: lib.rs
btcser-cmd/: Cargo.toml
btcser-cmd/src/: main.rs
btcser-mutator/: Cargo.toml
btcser-mutator/examples/: example.cpp
btcser-mutator/fuzz/: Cargo.toml
btcser-mutator/fuzz/fuzz_targets/: mutation_correctness.rs
btcser-mutator/include/: btcser_mutator.h
btcser-mutator/src/: lib.rs  mutator.rs  sampler.rs
btcser/examples/: foo.btcser  primitives.btcser
btcser/src/: lexer.rs  lib.rs  object.rs  parser.rs
