[package]
name = "btcser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.btcser]
path = "../../btcser"
[dependencies.btcser-mutator]
path = ".."

[[bin]]
name = "mutation_correctness"
path = "fuzz_targets/mutation_correctness.rs"
test = false
doc = false
bench = false
